# announcer

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  after_deploy.sh  deploy.sh  floki.3.10.yaml  floki.3.4.yaml  floki.3.5.yaml  floki.3.6.yaml  floki.3.9.yaml  install.sh  lint.sh  pyproject.toml  renovate.json  test.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: deploy.yml  steps.yml
announcer/: __init__.py  changelogrenderer.py  teamschangelogrenderer.py
src/announcer/: __init__.py  changelogrenderer.py
tests/: test_announce.py  test_changelog.py  testannounce1.md  testannounce_tags.md  testchangelog_formatting.md  testchangelog_simple.md  testchangelog_tables.md
