[project]
name = "announcer"
version = "6.0.1"
description = "Announce changes in keepachangelog-style CHANGELOG.md files to Slack and Microsoft Teams"
authors = [{ name = "Max Dymond", email = "max.dymond@metaswitch.com" }]
requires-python = ">=3.9,<4.0.0"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = [
    "slack",
    "teams",
]
dependencies = [
    "requests (>=2.19,<3.0)",
    "mistletoe (>=1,<2)",
]

[project.scripts]
announce = "announcer.__init__:main"

[dependency-groups]
dev = [
    "pylint==3.3.7",
    "wheel==0.45.1",
    "mypy==1.16.0",
    "yamllint==1.37.1",
    "bandit==1.8.3",
    "pytest==8.3.5",
    "flake8==7.2.0",
    "werkzeug==3.1.3",
    "pytest-httpserver==1.1.3",
    "tox==4.26.0",
    "pytest-cov==6.1.1",
    "types-requests>=2.32.0,<3",
    "isort==6.0.1",
]
