# Copyright (c) Alianza, Inc. All rights reserved.
[project]
name = "announcer"
version = "6.0.1"
description = "Announce changes in keepachangelog-style CHANGELOG.md files to Slack and Microsoft Teams"
authors = [{ name = "Max Dymond", email = "max.dymond@alianza.com" }]
requires-python = ">=3.10,<4.0.0"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = [
    "slack",
    "teams",
]
dependencies = [
    "requests (>=2.19,<3.0)",
    "mistletoe (>=1,<2)",
]

[project.scripts]
announce = "announcer.__init__:main"

[dependency-groups]
dev = [
    "pylint==4.0.2",
    "wheel==0.45.1",
    "mypy==1.17.1",
    "yamllint==1.37.1",
    "bandit==1.8.6",
    "pytest==9.0.1",
    "flake8==7.3.0",
    "werkzeug==3.1.3",
    "pytest-httpserver==1.1.3",
    "tox==4.28.4",
    "pytest-cov==7.0.0",
    "types-requests>=2.32.0,<3",
    "isort==7.0.0",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
